--- a/Seminar-LinkedData/document.tex
+++ b/Seminar-LinkedData/document.tex
@@ -1,5 +1,6 @@
 \documentclass{acm_proc_article-sp}
 
+\newdef{definition}{Definition}
 \newdef{example}{Example}
 \usepackage{color}
 \usepackage{listings}
@@ -24,7 +25,7 @@ showstringspaces=false}
 
 \begin{document}
 
-\title{Schema Enrichment in OWL Knowledge Bases}
+\title{Schema enrichment in OWL knowledge bases}
 %\subtitle{[Extended Abstract]
 
 \numberofauthors{1} 
