--- a/Seminar-LinkedData/sigproc.bib
+++ b/Seminar-LinkedData/sigproc.bib
@@ -22,6 +22,17 @@
 	YEAR = {2007}	
 }
 
+@article{wald-method,
+  title={Approximate is better than “exact” for interval estimation of binomial proportions},
+  author={Agresti, Alan and Coull, Brent A},
+  journal={The American Statistician},
+  volume={52},
+  number={2},
+  pages={119--126},
+  year={1998},
+  publisher={Taylor \& Francis}
+}
+
 @ARTICLE{refinement2,
 	AUTHOR = "Jens Lehmann and P Hitzler",
 	TITLE = "A refinement operator based learning algorithm for the ALC description logic",
