--- a/Seminar-LinkedData/src/abstract.tex
+++ b/Seminar-LinkedData/src/abstract.tex
@@ -1,24 +1,19 @@
 \begin{abstract}
 
-The Semantic Web is still growing and the availability of large knowledge graphs
-increased over the past years. In spite of the growing number of knowlege bases
-there exist very few with a sophisticated schema. Often they only consist of a
-collection of facts with no consistant structure. Other knowlege bases contain
-only schema information without instances of the defined schemata.
+The Semantic Web is steadily growing and the availability of large knowledge
+graphs increased over the past years. In spite of the growing number of
+knowledge bases, there exist very few with a sophisticated schema. Often they only consist of a
+collection of facts with no consistent structure. Other knowledge bases contain
+only schema information without instances.
 \\
-But only the combination of both of these extremes, sophisticated schema and
-available instance data can enable powerful reasoning, easier checking for
-consistency and improved queryability. 
+But only the combination of both, sophisticated schema and
+available instance data can enable powerful reasoning, easier consistency
+checking and improved query abilities.
 \\
-This article show two methods for the semantic enrichment of large OWL knowlege
+This article show two methods for the semantic enrichment of large OWL knowledge
 bases. The first method focuses at finding and creating class expressions
-in an automatic or semiautomatic approach based on given knowlege in the graph. 
-Whereas the second method enrichs knowlege bases with different types of OWL2
+in an automatic or semiautomatic approach, based on the existing data in the
+graph.
+Whereas the second method enriches knowledge bases with different types of OWL2
 axioms.
-
-% - In this article: two methods for enrichment
-%   - creating class expression for ontology learning (automatic/ semiautomatic
-%   approach) 
-%   - enrichment with OWL2 axioms via SPARQL
-
 \end{abstract}
