--- a/Seminar-LinkedData/src/related.tex
+++ b/Seminar-LinkedData/src/related.tex
@@ -8,11 +8,11 @@ Early work of supervised learning in description logic was published in
 subsumer} to solve the learning problem. Later work invented the concept of the
 refinement operator to solve the problem in a top-down
 approach.\cite{related_7} The refinement operator was later adapted for
-description logic \cite{refinement1,refinement2,refinement3} and is used as described in
-CELOE.
+description logic \cite{refinement1,refinement2,refinement3} and is also used in
+CELOE, as mentioned before.
 \\
 The starting point of (semi-)automatic ontology engineering was set by
-\cite{related_31}, a formal concept analysis was descibed in \cite{related_5}.
+\cite{related_31}, a formal concept analysis was described in \cite{related_5}.
 Another interesting approach is presented in \cite{related_relexo} which
-proposes to improve knowlege bases through relation exploration. It is
+proposes to improve knowledge bases through relation exploration. It is
 implemented in the RELExO framework.
