--- a/Seminar-LinkedData/src/abstract.tex
+++ b/Seminar-LinkedData/src/abstract.tex
@@ -10,8 +10,8 @@ But only the combination of both, sophisticated schema and
 available instance data can enable powerful reasoning, easier consistency
 checking and improved query abilities.
 \\
-This article show two methods for the semantic enrichment of large OWL knowledge
-bases. The first method focuses at finding and creating class expressions
+This article shows two methods for the semantic enrichment of large OWL
+knowledge bases. The first method focuses at finding and creating class expressions
 in an automatic or semiautomatic approach, based on the existing data in the
 graph.
 Whereas the second method enriches knowledge bases with different types of OWL2
