--- a/Seminar-LinkedData/src/introduction.tex
+++ b/Seminar-LinkedData/src/introduction.tex
@@ -10,9 +10,9 @@ instance data, consider the following example.
 \begin{example}
 Imagine a knowledge base containing famous persons like Barack Obama, Mahatma
 Gandhi, Elvis Presley etc. and a property called \texttt{birthPlace}. An
-algorithm may find out that every of the person instances contains this property
+algorithm may find out that every of the person instances contain this property
 and therefore \texttt{birthPlace} can be seen as a functional property with the
-domain \texttt{Person} and range \texttt{Place}.
+domain \texttt{Person} and the range \texttt{Place}.\\
 \vspace{-0.90 cm}
 \begin{verbatim}
 OBjectProperty: birthPlace
