revised version, probable not up to date

--- a/Seminar-LinkedData/src/abstract.tex
+++ b/Seminar-LinkedData/src/abstract.tex
@@ -10,15 +10,13 @@ But only the combination of both of these extremes, sophisticated schema and
 available instance data can enable powerful reasoning, easier checking for
 consistency and improved queryability. 
 \\
-This article show two methods for the semantic enrichment of large OWL knowlege
-bases. The first method focuses at finding and creating class expressions
-in an automatic or semiautomatic approach based on given knowlege in the graph. 
-Whereas the second method enrichs knowlege bases with different types of OWL2
-axioms.
-
-% - In this article: two methods for enrichment
-%   - creating class expression for ontology learning (automatic/ semiautomatic
-%   approach) 
-%   - enrichment with OWL2 axioms via SPARQL
+This report summarizes the content of two papers: (1) ``Class expression
+learning for ontology engineering'' by Lehmann et al and (2) ``Universal
+OWL Axiom Enrichment for Large Knowledge Bases'' by Bühmann et al.
+The method of the first article focuses at finding and creating class
+expressions in an automatic or semiautomatic approach based on given knowlege in
+the graph.
+Whereas the methods of the second paper enrichs knowlege bases with different
+types of OWL2 axioms.
 
 \end{abstract}
