--- a/Seminar-LinkedData/src/conclusion.tex
+++ b/Seminar-LinkedData/src/conclusion.tex
@@ -1,5 +1,5 @@
 \section{Conclusions}
-The algorithms and methods summarized in this article like they were presented
+The algorithms and methods summarized in this report like they were presented
 in \cite{paper1} and \cite{paper2} show promising results. The authors of
 \cite{paper1} analysed their CELOE algorithm with different heuristics and
 proved that approximating heuristic values are often very accurate while
