--- a/Seminar-LinkedData/src/main.tex
+++ b/Seminar-LinkedData/src/main.tex
@@ -6,7 +6,7 @@ semantic richness and the expressiveness of an ontology.
 The goal of the enrichment progress is to find axioms, which can be added to an
 existing ontology. A special case is to find definition of classes and
 subclasses. This process is closely related to the Inductive Logic Programming
-(ILP) as it is described later in this article.
+(ILP) as it is described later in this report.
 Ontology enrichment methods usually depend on machine learning or on applying
 heuristics to find additional axioms in the knowledge graph.\cite{paper2}
 
