--- a/Seminar-LinkedData/document.tex
+++ b/Seminar-LinkedData/document.tex
@@ -24,8 +24,7 @@ showstringspaces=false}
 
 \begin{document}
 
-\title{Schema Enrichment in OWL Knowledge Bases}
-%\subtitle{[Extended Abstract]
+\title{Schema Enrichment in Knowledge Bases}
 
 \numberofauthors{1} 
 \author{
@@ -43,17 +42,6 @@ Tim Schmiedl\\
 
 \input{src/abstract}
 
-
-% A category with the (minimum) three required fields
-\category{H.2.3}{Languages}{Query languages}
-%A category including the fourth, optional field follows...
-\category{I.2}{Learning}{Concept learning, Induction}
-
-\terms{Theory}
-
-\keywords{Ontology engineering, Supervised machine learning, Knowledge Base
-Enrichment, OWL, Heuristics}
-% NOT required for Proceedings
 
 %%%%%%%%%%%%%%  INTRODUCTION  %%%%%%%%%%%%%%
 \input{src/introduction}
